--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ dependencies = [
     "langgraph>=0.6.7",
     "openai>=1.107.2",
     "playwright>=1.55.0",
-    "pydantic>=2.11.9",
+    "pydantic[email]>=2.11.9",
     "pyyaml>=6.0.2",
     "requests>=2.32.5",
 ]
