--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "openai>=1.107.2",
     "playwright>=1.55.0",
     "pydantic[email]>=2.11.9",
+    "pytest>=8.4.2",
     "pyyaml>=6.0.2",
     "requests>=2.32.5",
 ]
